--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "engines": {
-  "node" : "14.15.4"
+  "node" : "14.15.4",
+  "npm" : 6.14.11
 },
   "dependencies": {
     "bcrypt": "^5.0.0",
