--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "author": "",
   "license": "ISC",
   "engines": {
-  "node" : "14.15.4",
-  "npm" : 6.14.11
+  "node" : "14.15.4"
 },
   "dependencies": {
     "bcrypt": "^5.0.0",
