Trying to push heroku

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Secrets",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,7 +11,7 @@
   "license": "ISC",
   "engines": {
   "node" : "14.15.4"
-},
+  },
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
